more overflow fixing

--- a/src/components/Testimonials/styles.css
+++ b/src/components/Testimonials/styles.css
@@ -20,7 +20,6 @@
 
 .lp-testimonials-grid {
   display: flex;
-  flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
   flex: 1;
@@ -32,7 +31,7 @@
   font-weight: bold;
   border: 2px solid var(--border-primary-color);
   border-radius: 15px;
-  margin: 20px 0;
+  margin: 20px 10px;
   cursor: pointer;
 }
 
@@ -42,7 +41,6 @@
   border-radius: 15px;
   padding: 20px;
   text-align: center;
-  width: 300px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s, box-shadow 0.3s;
 }
